Originally created by Muness Alrubaie, totally rewritten by
Author: Alec Thomas <alec@swapoff.org>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

tractags-0.8 (not yet released)
 new features
 * #9797: Add configurable prefix for linking tags to wiki pages


tractags-0.7 (06-Apr-2014)
 resolved issues
 * #1960: Tags from Tickets / Milestones split into multiple tags
 * #2424: Lost wiki change when commiting tag changes
 * #2493: Wiki page names can be in Unicode
 * #2714: tractags.api.TagSystem.delete_tags broken
 * #2749: ListTagged in 0.6 doesn't give title of wiki pages from first heading
   by adding new method describe_tagged_resource
   Note: This is a '''tag provider API change'''.
 * #2939: Requirement.parse('Genshi==dev,>=0.5.dev-r698')
 * #3145: Create New Wiki Page with a Tag
 * #3206: Edit wiki page content and tag
 * #3359: Tickets tags don't work when using MySQL 4.x
 * #3624: invalid link when using more than one tag in tagged
 * #3677: Database operations fail with PostgreSQL 8.3
 * #3753: Carry over tags from PageTemplates/ (was: TagIt macro)
 * #3864: Unchecked permissions/restrictions for list of available tag realms
 * #3983: ListTagged broken for tags starting with 'or'
 * #4078: Bring back the mincount functionality for the TagCloud macro
 * #4164: Wiki pages without tags have no tag styles
 * #4223: Bad CSS interpretation with IE
 * #4277: Support for MySQL
 * #4503: Performance issues
   mitigated by
   * mirroring ticket tags into normalized `tags` db table
   * caching `get_tagged_resources` for tickets
   * optionally skipping fine-grained view permission tests for tickets
   * using resource-less tag counters for tags-only tasks (i.e. tag cloud)
 * #4996: TagsPlugin fails on upgrading
 * #5345: TracError: The Trac Environment needs to be upgraded
 * #5575: UnicodeEncodeError on Japanese tag
 * #5714: No documentation on WikiMacros page
 * #7857: Regression in Tag query functionality